codex-rs/core/tests/suite/snapshots/all__suite__compact__mid_turn_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.\",\n&[(\"Local Compaction Request\", &auto_compact_mock.single_request()),\n(\"Local Post-Compaction History Layout\",\n&post_auto_compact_mock.single_request()),])"
---
Scenario: True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.

## Local Compaction Request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <collaboration_mode># Collaboration Mode: Default\n\nYou are now...
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:function call limit push
03:function_call/test_tool
04:function_call_output:unsupported call: test_tool
05:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <collaboration_mode># Collaboration Mode: Default\n\nYou are now...
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:function call limit push
03:message/user:<COMPACTION_SUMMARY>\nAUTO_SUMMARY
